Changes made on Navbar and Courasel

--- a/index.html
+++ b/index.html
@@ -110,10 +110,10 @@
                                     <a class="nav-link" href="#"><i class="fa fa-plus-square"></i>New Arrivals</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#"><i class="fa fa-female"></i>Cellphones</a>
+                                    <a class="nav-link" href="#"><i class="fa fa-mobile-alt"></i>Cellphones</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#"><i class="fa fa-child"></i>Desktops & Laptops</a>
+                                    <a class="nav-link" href="#"><i class="fa fa-laptop"></i>Desktops & Laptops</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="#"><i class="fa fa-mobile-alt"></i>Gadgets & Accessories</a>
